<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/welcomeTo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/welcome_to"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Back_button" />

    <TextView
        android:id="@+id/OutfitAI_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand_name_main"
        android:fontFamily="@font/rubik_bold"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textSize="50sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/OutfitAI_suffix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTo_text" />

    <TextView
        android:id="@+id/OutfitAI_suffix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand_name_suffix"
        android:fontFamily="@font/rubik_bold"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="50sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/OutfitAI_text"
        app:layout_constraintStart_toEndOf="@+id/OutfitAI_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/foreground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OutfitAI_text"
        app:srcCompat="@drawable/foreground" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/white_small_button"
        android:fontFamily="@font/rubik_bold"
        android:foreground="@drawable/button_ripple"
        android:text="@string/common_back"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OutfitAI_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/UsernameOrPassword_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/signin_title_username_email"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/UsernameOrPassword_textInputBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UsernameOrPassword_text"
                app:srcCompat="@drawable/white_text_input_background" />

            <EditText
                android:id="@+id/UsernameOrEmail_textInput"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/rubik_bold"
                android:gravity="center_vertical"
                android:hint="@string/signin_hint_username_email"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textCursorDrawable="@null"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/UsernameOrPassword_textInputBackground"
                app:layout_constraintEnd_toEndOf="@+id/UsernameOrPassword_textInputBackground"
                app:layout_constraintStart_toStartOf="@+id/UsernameOrPassword_textInputBackground"
                app:layout_constraintTop_toTopOf="@+id/UsernameOrPassword_textInputBackground" />

            <TextView
                android:id="@+id/Password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/signin_title_password"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UsernameOrPassword_textInputBackground" />

            <ImageButton
                android:id="@+id/btn_toggle_password_signin"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_visibility"
                app:layout_constraintBottom_toBottomOf="@+id/Password_textInputBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/Password_textInputBackground"
                app:layout_constraintVertical_bias="0.3" />

            <ImageView
                android:id="@+id/Password_textInputBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toStartOf="@+id/btn_toggle_password_signin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Password_text"
                app:srcCompat="@drawable/white_text_input_background" />

            <EditText
                android:id="@+id/Password_textInput"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/rubik_bold"
                android:gravity="center_vertical"
                android:hint="@string/signin_hint_password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textCursorDrawable="@null"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/Password_textInputBackground"
                app:layout_constraintEnd_toEndOf="@+id/Password_textInputBackground"
                app:layout_constraintStart_toStartOf="@+id/Password_textInputBackground"
                app:layout_constraintTop_toTopOf="@+id/Password_textInputBackground" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/SignIn_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/green_large_button"
                android:fontFamily="@font/rubik_bold"
                android:foreground="@drawable/button_ripple"
                android:text="@string/signin_btn_signin"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Password_textInputBackground" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ForgotPassword_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/rubik_bold"
                android:foreground="@drawable/button_ripple"
                android:text="@string/signin_btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/dark_gray"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SignIn_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>